the scrollbar on servers list fixed

--- a/src/components/_servers.scss
+++ b/src/components/_servers.scss
@@ -46,7 +46,7 @@
     }
   
     &::-webkit-scrollbar-thumb {
-      background: var(--background-secondary);
+      background: var(--scrollbar-thin-thumb);
       border-radius: var(--radius-primary);
     }
 }
